--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input,
+select {
+	outline: none!important;
+}
